<resources>
    <string name="app_name">noRAM</string>
    <string name="organizerButton">Organize an Event</string>
    <string name="attendeeButton">Check in or Browse Events</string>
    <string name="adminButton">Admin</string>

    <string name="organizer_fragment_event_list_header">Event List</string>

    <string name="organizer_fragment_create_event_p1_header">Create Event</string>
    <string name="organizer_fragment_create_event_p1_upl_poster_button">Upload Event Poster</string>
    <string name="organizer_fragment_create_event_p1_name_hint">Event Name</string>
    <string name="organizer_fragment_create_event_p1_location_hint">Event Location</string>
    <string name="organizer_fragment_create_event_p1_startTime_hint">Start Date/Time</string>
    <string name="organizer_fragment_create_event_p1_startTime_set">Start: %d/%d/%d @ %02d:%02d</string>
    <string name="organizer_fragment_create_event_p1_endTime_hint">End Date/Time</string>
    <string name="organizer_fragment_create_event_p1_endTime_set">End: %d/%d/%d @ %02d:%02d</string>
    <string name="organizer_fragment_create_event_p1_details_hint">Details</string>
    <string name="organizer_fragment_create_event_p1_milestones_hint"><font size="44">Event Milestones (comma separated)</font></string>
    <string name="organizer_fragment_create_event_p1_location_check_text">Track check-in locations for this event?</string>
    <string name="organizer_fragment_create_event_p1_limitSignUps_check_text">Limit sign-ups for this event?</string>
    <string name="organizer_fragment_create_event_p1_limitSignUps_hint">Maximum number of sign-ups</string>
    <string name="organizer_fragment_create_event_next_button">Next</string>

    <string name="organizer_fragment_create_event_p2_header">Create Event - Part 2</string>
    <string name="organizer_fragment_create_event_p2_gen_QR_button">Generate a QR code for this event</string>
    <string name="organizer_fragment_create_event_p2_upl_QR_button">Upload a QR code for this event</string>

    <string name="organizer_fragment_profile_header">Profile</string>

    <string name="organizer_activity_edit_event_header">Edit Event</string>
    <string name="organizer_activity_edit_event_done_button">Done</string>
    <string name="organizer_activity_edit_event_cancel_button">Cancel</string>
    <string name="organizer_activity_edit_event_apply_button">Apply</string>
    <string name="organizer_profile_update_success">Changes saved</string>
    <string name="organizer_profile_update_cancel">Changes cancelled</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attendee_profile">Attendee profile</string>
    <string name="event_list">Event List</string>
    <string name="scan_qr_code_title">Scan QR Code</string>
    <string name="my_events_button">My Events</string>
    <string name="all_events_button">All Events</string>
    <string name="event_search_hint">Search Events</string>
    <string name="signup_button">SIGN UP</string>
    <string name="signup_count_format">%d Signed Up</string>
    <string name="signup_limit_format">%d/%d Signed Up</string>
    <string name="announcement_text">Announcements</string>
    <string name="checkedin_text">Checked In</string>
    <string name="attendee_profile_title">Edit Your Profile</string>
    <string name="attendee_events_title">Browse Events</string>
    <string name="confirm">Confirm</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="home_page">Homepage</string>
    <string name="access_location">Allow event organizers to access your location</string>
    <string name="save">Save</string>
    <string name="attendee_announcements_title">Event Announcements</string>
    <string name="profile">Profile</string>
    <string name="new_event">New Event</string>
    <string name="my_events">My Events</string>
    <string name="scan">Scan</string>
    <string name="events">Events</string>
    <string name="event_created_header_text">Event Created!</string>
    <string name="event_qr_codes_info_text">Here are your event QR codes:</string>
    <string name="check_in_qr_code_info_str">Check-In QR Code:</string>
    <string name="promotional_qr_code_info_str">Promotional QR Code:</string>
    <string name="finish">Finish</string>
    <string name="continue_text">Continue</string>
    <string name="administrator_page_title">Administrator Page</string>
    <string name="admin_view_events_button">View Events</string>
    <string name="admin_view_profiles_button">View Profiles</string>
    <string name="admin_view_images_button">View Images</string>
    <string name="admin_label">Admin Mode</string>
    <string name="admin_events_page_title">Events List</string>
    <string name="admin_users_page_title">Users List</string>
    <string name="admin_images_page_title">Image Gallery</string>
    <string name="organizer_create_event_finish">Finish</string>
    <string name="check_in_qr_code_settings_header">Check In QR Code Settings:</string>
    <string name="auto_generate">Auto-Generate</string>
    <string name="upload">Upload</string>
    <string name="upload_qr_code_header">Upload QR Code</string>
    <string name="uploadeduriplaceholder">UploadedURIPlaceholder</string>
    <string name="promotional_qr_code_settings_header">Promotional QR Code Settings:</string>
    <string name="arrow_pointing_to_the_left">Arrow pointing to the left</string>
    <string name="new_push_notification">New Push Notification</string>
    <string name="title">Title:</string>
    <string name="content">Content:</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="checkin_continue_button_text">Continue</string>
    <string name="have_fun_at_event_placeholder"><![CDATA[Have fun at <event>!]]></string>
    <string name="thanks_for_checking_in_header">Thanks For Checking In!</string>
    <string name="display_name">Display Name</string>
    <string name="signedin_text">Signed Up</string>
    <string name="main_menu_attend">Attend Event</string>
    <string name="main_menu_organize">Organize Event</string>
    <string name="event_poster_title">Below are some events you might enjoy:</string>
    <string name="unsign_button">Undo Sign Up</string>
    <string name="total_current_nattendees_n0">Total Current \nAttendees:\n0</string>
    <string name="all_time_nattendees_n0">All Time \nAttendees:\n0</string>
    <string name="all_time_nsignups_n0">All Time \nSignups:\n0</string>
    <string name="total_current_n_signups_n0">Total Current \n Signups:\n0</string>
    <string name="dashboard">Dashboard</string>
    <string name="empty_placeholder_organizer_profile_list">No upcoming events - try adding one!</string>
    <string name="signed_up">Signed-Up</string>
    <string name="checked_in">Checked-In</string>
    <string name="there_are_no_checked_in_attendees_yet">There are no checked-in attendees yet</string>
    <string name="there_are_no_signed_up_attendees_yet">There are no signed-up attendees yet</string>
    <string name="past_events">Past Events</string>
    <string name="welcome_to_noram_events">Welcome to noRAM Events!</string>
    <string name="no_events_to_show_why_not_make_one">No events to show... why not make one?</string>
    <string name="no_results_found">No results found</string>
    <string name="there_s_no_events_here">There\'s no events here</string>
    <string name="list_of_attendees">List of Attendees</string>
    <string name="content_text">Content</string>
    <string name="no_announcements_yet">No announcements yet</string>
    <string name="submit">Submit</string>
</resources>