<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_organizer_create_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/organizer_fragment_create_event_p1_edit_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:ems="10"
            android:hint="@string/organizer_fragment_create_event_p1_name_hint"
            android:inputType="textShortMessage"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/organizer_fragment_create_event_p1_edit_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:ems="10"
            android:hint="@string/organizer_fragment_create_event_p1_location_hint"
            android:inputType="textShortMessage"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/organizer_fragment_create_event_p1_edit_startDateTime_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:text="@string/organizer_fragment_create_event_p1_startTime_hint"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/organizer_fragment_create_event_p1_edit_endDateTime_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:text="@string/organizer_fragment_create_event_p1_endTime_hint"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/organizer_fragment_create_event_p1_edit_details_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/organizer_fragment_create_event_p1_details_hint"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/organizer_fragment_create_event_p1_edit_milestones_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:ems="10"
            android:hint="@string/organizer_fragment_create_event_p1_milestones_hint"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"

                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/baseline_add_photo_alternate_24"

                app:shapeAppearanceOverlay="@style/rectangle"

                android:scaleType="fitCenter" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/add_photo_draw_foreground"
                app:backgroundTint="@color/add_photo_draw_background"

                app:layout_constraintBottom_toBottomOf="@+id/image_view"
                app:layout_constraintEnd_toEndOf="@+id/image_view"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/delete_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/delete_photo_draw_foreground"
                app:backgroundTint="@color/delete_photo_draw_background"
                app:layout_constraintEnd_toEndOf="@+id/image_view"
                app:layout_constraintTop_toTopOf="@+id/image_view"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/organizer_fragment_create_event_p1_edit_trackLocation_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:buttonTint="@color/main_color"
            android:text="@string/organizer_fragment_create_event_p1_location_check_text"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/organizer_fragment_create_event_p1_edit_limitSignUps_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:buttonTint="@color/main_color"
            android:text="@string/organizer_fragment_create_event_p1_limitSignUps_check_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/organizer_fragment_create_event_p1_edit_signUpLimit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:ems="10"
            android:hint="@string/organizer_fragment_create_event_p1_limitSignUps_hint"
            android:inputType="number"
            android:textSize="20sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/organizer_fragment_create_event_p1_edit_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:text="@string/organizer_fragment_create_event_next_button"
            android:textColor="@color/main_color"
            android:textSize="24dp" />

    </LinearLayout>

</ScrollView>