<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckInConfettiActivity">

    <TextView
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="#90B2F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/confetti_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_bar" />

    <TextView
        android:id="@+id/checkin_thanks_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks_for_checking_in_header"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/confetti_view"
        app:layout_constraintEnd_toEndOf="@+id/confetti_view"
        app:layout_constraintStart_toStartOf="@+id/confetti_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/checkin_have_fun_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_fun_at_event_placeholder"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkin_thanks_title"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/checkin_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:padding="15dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/checkin_continue_button_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkin_have_fun_event"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>